Resized icons. Fixed the resume links. About to change the colors.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <nav id="nav">
         <ul>
           <li><a href="#one" class="active">About Me</a></li>
-          <li><a href="#two">Skills and Technologies</a></li>
-          <li><a href="#three">Web Development Projects</a></li>
+          <li><a href="#two">My Skills and Technologies</a></li>
+          <li><a href="#three">My Projects</a></li>
           <li><a href="#four">Contact Me</a></li>
-          <li><a href="#five">Resume</a></li>
+          <li><a href="#five">My Resume</a></li>
         </ul>
       </nav>
       <footer>
@@ -58,7 +58,7 @@
 			</a>
           </li>
           <li>
-            <a href="/assets/resume/resume.txt" class="icon solid fa-file-alt">
+            <a href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf" class="icon solid fa-file-pdf">
 				<span class="label">Resume</span>
 			</a>
           </li>
@@ -104,7 +104,7 @@
         <!-- Two -->
         <section id="two">
           <div class="container">
-            <h3>Skills and Technologies</h3>
+            <h3>My Skills and Technologies</h3>
             <div class="box alt">
               <div class="row gtr-50 gtr-uniform">
                 <div class="col-4">
@@ -298,7 +298,7 @@
         <!-- Three -->
         <section id="three">
           <div class="container">
-            <h3>Web Development Projects</h3>
+            <h3>My Projects</h3>
             <div class="features">
               <article>
                 <a href="#" class="image"
@@ -376,8 +376,18 @@
         <!-- Five -->
 		<section id="five">
 			<div class="container">
-				<h3>Resume</h3>
-
+				<h3>My Resume</h3>
+          <ul class="actions">
+            <li>
+              <a href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf" class="button primary icon solid fa-file-pdf">PDF</a>
+            </li>
+            <li>
+              <a href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=doc" class="button icon solid fa-file-word">DOC</a>
+            </li>
+            <li>
+              <a href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=txt" class="button icon solid fa-file-alt">TXT</a>
+            </li>
+          </ul>
 			</div>
 		</section>
 
