Changed the about me. Set the colors to blue. Updated the projects area with links.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div id="wrapper">
       <!-- Main -->
       <div id="main">
-        <!-- One -->
+        <!-- One: About Me -->
         <section id="one">
           <div class="image main" data-position="center">
             <img src="images/banner.jpg" alt="" />
@@ -79,9 +79,10 @@
             <h3>About Me</h3>
             <p>
               I am a full stack engineer with experience in Python, Javascript,
-              React.js, Redux, and PostgreSQL. I’m originally from the foothills
-              of Appalachia, but I found myself drawn to the Bay Area biotech
-              industry to help others. Most of the software I encountered didn’t
+              React.js, Redux, and PostgreSQL. Originally from the foothills
+              of Appalachia, I received a degree in bioengineering and moved to 
+              the Bay Area to work on patient-focused therapies in the biotech 
+              industry. Most of the software I encountered didn’t
               enable users to make well-informed decisions or enhance
               productivity. I believe software should be designed with the user
               experience in mind and changed careers to focus on creating
@@ -101,7 +102,7 @@
           </div>
         </section>
 
-        <!-- Two -->
+        <!-- Two: My Skills and Technologies -->
         <section id="two">
           <div class="container">
             <h3>My Skills and Technologies</h3>
@@ -295,52 +296,69 @@
           </div>
         </section>
 
-        <!-- Three -->
+        <!-- Three: My Projects -->
         <section id="three">
           <div class="container">
             <h3>My Projects</h3>
             <div class="features">
               <article>
-                <a href="#" class="image"
-                  ><img src="images/pic01.jpg" alt=""
+                <a href="https://taco-tea-group.herokuapp.com/" class="image"
+                  ><img src="images/taco-tea.png" alt=""
                 /></a>
                 <div class="inner">
-                  <h4>Possibly broke spacetime</h4>
+                  <h4>Taco Tea</h4>
                   <p>
-                    Integer eu ante ornare amet commetus vestibulum blandit
-                    integer in curae ac faucibus integer adipiscing ornare amet.
+                    A Medium clone focused on food, specifically tacos. Users 
+                    can share their food experiences and interact through emojis 
+                    and comments.
+                    <br /><br />
+                    Built with Node.js, Express.js and Sequelize.
+                    <ul class="icons">
+                      <li>
+                        <a href="https://github.com/cpettet/Taco_Tea" class="icon brands fa-github">
+                          <span class="label">Github</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://taco-tea-group.herokuapp.com/" class="icon solid fa-link">
+                          <span class="label">Link</span>
+                        </a>
+                      </li>
+                    </ul>
                   </p>
                 </div>
               </article>
               <article>
-                <a href="#" class="image"
-                  ><img src="images/pic02.jpg" alt=""
+                <a href="https://folk-genius.herokuapp.com/" class="image"
+                  ><img src="images/folk-genius-01.png" alt=""
                 /></a>
                 <div class="inner">
-                  <h4>Terraformed a small moon</h4>
+                  <h4>Folk Genius</h4>
                   <p>
-                    Integer eu ante ornare amet commetus vestibulum blandit
-                    integer in curae ac faucibus integer adipiscing ornare amet.
+                    A Genius clone focused on folk and indie music. Users can add, 
+                    update, and delete tracks.
+                    <br /><br />
+                    Built with Node.js, Express.js, Sequelize, React.js, and Redux.
                   </p>
-                </div>
-              </article>
-              <article>
-                <a href="#" class="image"
-                  ><img src="images/pic03.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h4>Snapped dark matter in the wild</h4>
-                  <p>
-                    Integer eu ante ornare amet commetus vestibulum blandit
-                    integer in curae ac faucibus integer adipiscing ornare amet.
-                  </p>
+                  <ul class="icons">
+                    <li>
+                      <a href="https://github.com/cpettet/Genius-Clone" class="icon brands fa-github">
+                        <span class="label">Github</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://folk-genius.herokuapp.com/" class="icon solid fa-link">
+                        <span class="label">Link</span>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </article>
             </div>
           </div>
         </section>
 
-        <!-- Four -->
+        <!-- Four: Contact Me -->
         <section id="four">
           <div class="container">
             <h3>Contact Me</h3>
@@ -373,7 +391,7 @@
           </div>
         </section>
 
-        <!-- Five -->
+        <!-- Five: My Resume -->
 		<section id="five">
 			<div class="container">
 				<h3>My Resume</h3>
