Updated projects with screenshots.

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       </header>
       <nav id="nav">
         <ul>
-          <li><a href="#one" class="active">About Me</a></li>
-          <li><a href="#two">My Skills and Technologies</a></li>
-          <li><a href="#three">My Projects</a></li>
-          <li><a href="#four">Contact Me</a></li>
-          <li><a href="#five">My Resume</a></li>
+          <li><a href="#about-me" class="active">About Me</a></li>
+          <li><a href="#my-skills-and-technologies">My Skills and Technologies</a></li>
+          <li><a href="#my-projects">My Projects</a></li>
+          <li><a href="#contact-me">Contact Me</a></li>
+          <li><a href="#my-resume">My Resume</a></li>
         </ul>
       </nav>
       <footer>
@@ -71,7 +71,7 @@
       <!-- Main -->
       <div id="main">
         <!-- One: About Me -->
-        <section id="one">
+        <section id="about-me">
           <div class="image main" data-position="center">
             <img src="images/banner.jpg" alt="" />
           </div>
@@ -103,7 +103,7 @@
         </section>
 
         <!-- Two: My Skills and Technologies -->
-        <section id="two">
+        <section id="my-skills-and-technologies">
           <div class="container">
             <h3>My Skills and Technologies</h3>
             <div class="box alt">
@@ -297,35 +297,62 @@
         </section>
 
         <!-- Three: My Projects -->
-        <section id="three">
+        <section id="my-projects">
           <div class="container">
             <h3>My Projects</h3>
             <div class="features">
               <article>
-                <a href="https://taco-tea-group.herokuapp.com/" class="image"
-                  ><img src="images/taco-tea.png" alt=""
+                <a href="https://freezuh-final-transformation.herokuapp.com/" class="image"
+                  ><img src="images/freezuh-01.png" alt="screenshot of website"
                 /></a>
                 <div class="inner">
-                  <h4>Taco Tea</h4>
+                  <h4>Freezuh, Final Transformation</h4>
                   <p>
-                    A Medium clone focused on food, specifically tacos. Users 
-                    can share their food experiences and interact through emojis 
-                    and comments.
+                    A biospecimen storage and retrieval application for a biotech
+                    company. Users can accession samples and store them in
+                    user-created storage containers. Once stored, samples can be easily
+                    found by searching or browsing through containers.
                     <br /><br />
-                    Built with Node.js, Express.js and Sequelize.
-                    <ul class="icons">
-                      <li>
-                        <a href="https://github.com/cpettet/Taco_Tea" class="icon brands fa-github">
-                          <span class="label">Github</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="https://taco-tea-group.herokuapp.com/" class="icon solid fa-link">
-                          <span class="label">Link</span>
-                        </a>
-                      </li>
-                    </ul>
+                    Built with Python, Flask, SQLAlchemy, React.js, and Redux.
                   </p>
+                  <ul class="icons">
+                    <li>
+                      <a href="https://github.com/cpettet/freezuh_project" class="icon brands fa-github">
+                        <span class="label">Github</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://freezuh-final-transformation.herokuapp.com/" class="icon solid fa-link">
+                        <span class="label">Link</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <a href="https://like-or-hate.herokuapp.com/" class="image"
+                  ><img src="images/like-or-hate-01.png" alt="screenshot of website"
+                /></a>
+                <div class="inner">
+                  <h4>Like Or Hate</h4>
+                  <p>
+                    An Instagram clone with additional functionality allowing users
+                    to democratically delete posts or comments.
+                    <br /><br />
+                    Built with AWS, Python, Flask, SQLAlchemy, React.js, and Redux.
+                  </p>
+                  <ul class="icons">
+                    <li>
+                      <a href="https://github.com/composerben/flask-group-project" class="icon brands fa-github">
+                        <span class="label">Github</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://like-or-hate.herokuapp.com/" class="icon solid fa-link">
+                        <span class="label">Link</span>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </article>
               <article>
@@ -354,12 +381,39 @@
                   </ul>
                 </div>
               </article>
+              <article>
+                <a href="https://taco-tea-group.herokuapp.com/" class="image"
+                  ><img src="images/taco-tea.png" alt=""
+                /></a>
+                <div class="inner">
+                  <h4>Taco Tea</h4>
+                  <p>
+                    A Medium clone focused on food, specifically tacos. Users 
+                    can share their food experiences and interact through emojis 
+                    and comments.
+                    <br /><br />
+                    Built with Node.js, Express.js and Sequelize.
+                    <ul class="icons">
+                      <li>
+                        <a href="https://github.com/cpettet/Taco_Tea" class="icon brands fa-github">
+                          <span class="label">Github</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://taco-tea-group.herokuapp.com/" class="icon solid fa-link">
+                          <span class="label">Link</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </p>
+                </div>
+              </article>
             </div>
           </div>
         </section>
 
         <!-- Four: Contact Me -->
-        <section id="four">
+        <section id="contact-me">
           <div class="container">
             <h3>Contact Me</h3>
 			        <div class="table-wrapper">
@@ -392,7 +446,7 @@
         </section>
 
         <!-- Five: My Resume -->
-		<section id="five">
+		<section id="my-resume">
 			<div class="container">
 				<h3>My Resume</h3>
           <ul class="actions">
