Removed AngelList info. Added buttons under intro - resume download, link to projects section.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
               my girlfriend and dog on adventures, listening to music, and
               starting new DIY projects (ask me about the bathroom renovation).
             </p>
+            <h3>My Resume</h3>
+          <ul class="actions">
+            <li>
+              <a href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf" class="button primary icon solid fa-file-pdf">My Resume (PDF)</a>
+            </li>
+            <li>
+              <a href="#my-projects" class="button icon solid fa-folder-open">My Projects</a>
+            </li>
+          </ul>
           </div>
         </section>
 
@@ -434,10 +443,6 @@
                     <tr>
                       <td><strong>LinkedIn</strong></td>
                       <td><a href="https://www.linkedin.com/in/christianpettet/">christianpettet</a></td>
-                    </tr>
-                    <tr>
-                      <td><strong>AngelList</strong></td>
-                      <td><a href="https://angel.co/u/christian-pettet">christian-pettet</a></td>
                     </tr>
                   </tbody>
                 </table>
