Mobile responsiveness. Avatar looks good now.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
   </head>
   <body>
     <nav>
-      <div class="logo"><h4>The Nav</h4></div>
+      <div class="avatar__container">
+        <img
+          src="/images/avatar.jpg"
+          alt="headshot of Christian Pettet"
+          class="avatar"
+        />
+      </div>
+
+      <a href="#" class="nav__link">
+        <h1>Christian Pettet</h1>
+      </a>
       <ul class="nav__links">
         <li><a class="nav__link" href="#about" class="active">About</a></li>
-        <li><a class="nav__link" href="#skills-and-technologies">Skills and Tech</a></li>
+        <li>
+          <a class="nav__link" href="#skills-and-technologies"
+            >Skills and Tech</a
+          >
+        </li>
         <li><a class="nav__link" href="#projects">Projects</a></li>
         <li><a class="nav__link" href="#contact">Contact</a></li>
         <li><a class="nav__link" href="#resume">Resume</a></li>
@@ -24,6 +38,10 @@
         <div class="line3"></div>
       </div>
     </nav>
+    <div class="banner__container">
+      <img src="/images/banner.jpg" class="banner" />
+    </div>
+
     <section id="about">
       <h3>About Me</h3>
       <p>
