--- a/index.html
+++ b/index.html
@@ -10,24 +10,13 @@
   </head>
   <body>
     <nav>
-      <div class="avatar__container">
-        <img
-          src="/images/avatar.jpg"
-          alt="headshot of Christian Pettet"
-          class="avatar"
-        />
-      </div>
 
       <a href="#" class="nav__link">
         <h1>Christian Pettet</h1>
       </a>
       <ul class="nav__links">
         <li><a class="nav__link" href="#about" class="active">About</a></li>
-        <li>
-          <a class="nav__link" href="#skills-and-technologies"
-            >Skills and Tech</a
-          >
-        </li>
+        <li><a class="nav__link" href="#skills-and-tech">Skills and Tech</a></li>
         <li><a class="nav__link" href="#projects">Projects</a></li>
         <li><a class="nav__link" href="#contact">Contact</a></li>
         <li><a class="nav__link" href="#resume">Resume</a></li>
@@ -67,7 +56,7 @@
         </p>
       </section>
   
-      <section id="skills-and-technologies">
+      <section id="skills-and-tech">
         <h3>My Skills and Technologies</h3>
         <div class="skills__container">
           <div class="skill">
