Changed skills and techs. Better grid layout.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </p>
       </section>
   
+      <h1 class="section__header">My Skills & Technologies</h1>
       <section id="skills-and-tech">
-        <h1 class="section__header">My Skills and Technologies</h1>
         <div class="skills__container">
           <div class="skill">
             <svg viewBox="0 0 128 128">
@@ -264,8 +264,8 @@
         </div>
       </section>
   
+      <h1 class="section__header">My Projects</h1>
       <section id="projects">
-        <h3>My Projects</h3>
         <div class="features">
           <article>
             <a href="https://freezuh-final-transformation.herokuapp.com/" class="image"
