Changed the breakpoints. Messed around with the grid and flex boxes.

--- a/index.html
+++ b/index.html
@@ -33,26 +33,31 @@
   
       <h1 class="section__header">About Me</h1>
       <section id="about" class="about">
-        <p class="about__paragraph">
-          I am a full stack engineer with experience in Python, Javascript,
-          React.js, Redux, and PostgreSQL. Originally from the foothills of
-          Appalachia, I received a degree in bioengineering and moved to the Bay
-          Area to work on patient-focused therapies in the biotech industry. Most
-          of the software I encountered didn’t enable users to make well-informed
-          decisions or enhance productivity. I believe software should be designed
-          with the user experience in mind and changed careers to focus on
-          creating bespoke applications.
-        </p>
-        <p class="about__paragraph">
-          I enjoy pair-programming with others on a team, or tackling issues on my
-          own. I prefer direct face-to-face feedback from others and my managers.
-        </p>
-        <p class="about__paragraph">
-          My home away from home is the gym where I enjoy powerlifting. I enjoy
-          following my Cincinnati Bengals and all things NFL, taking my girlfriend
-          and dog on adventures, listening to music, and starting new DIY projects
-          (ask me about the bathroom renovation).
-        </p>
+        <div class="about__wrapper__image">
+          <img class="avatar" src="/images/avatar.jpg" alt="zoomed-in photo of Christian Pettet" />
+        </div>
+        <div class="about__wrapper__paragraphs">
+          <p class="about__paragraph">
+            I am a full stack engineer with experience in Python, Javascript,
+            React.js, Redux, and PostgreSQL. Originally from the foothills of
+            Appalachia, I received a degree in bioengineering and moved to the Bay
+            Area to work on patient-focused therapies in the biotech industry. Most
+            of the software I encountered didn’t enable users to make well-informed
+            decisions or enhance productivity. I believe software should be designed
+            with the user experience in mind and changed careers to focus on
+            creating bespoke applications.
+          </p>
+          <p class="about__paragraph">
+            I enjoy pair-programming with others on a team, or tackling issues on my
+            own. I prefer direct face-to-face feedback from others and my managers.
+          </p>
+          <p class="about__paragraph">
+            My home away from home is the gym where I enjoy powerlifting. I enjoy
+            following my Cincinnati Bengals and all things NFL, taking my girlfriend
+            and dog on adventures, listening to music, and starting new DIY projects
+            (ask me about the bathroom renovation).
+          </p>
+        </div>
       </section>
   
       <h1 class="section__header">My Skills & Technologies</h1>
