Working on cards interface for projects

--- a/index.html
+++ b/index.html
@@ -273,9 +273,12 @@
       <section id="projects">
         <div class="features">
           <article>
-            <a href="https://freezuh-final-transformation.herokuapp.com/" class="image"
-              ><img src="images/freezuh-01.png" alt="screenshot of website"
-            /></a>
+            <a
+              href="https://freezuh-final-transformation.herokuapp.com/"
+              class="image__container"
+            >
+              <img class="image" src="images/freezuh-01.png" alt="screenshot of website" />
+            </a>
             <div class="inner">
               <h4>Freezuh, Final Transformation</h4>
               <p>
@@ -287,12 +290,12 @@
                 Built with Python, Flask, SQLAlchemy, React.js, Redux, and AWS.
               </p>
               <ul class="icons">
-                <li>
+                <li class="inner__link">
                   <a href="https://github.com/cpettet/freezuh_project" class="icon brands fa-github">
                     <span class="label">Github</span>
                   </a>
                 </li>
-                <li>
+                <li class="inner__link">
                   <a href="https://freezuh-final-transformation.herokuapp.com/" class="icon solid fa-link">
                     <span class="label">Link</span>
                   </a>
