Working on the containers for projects

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://kit.fontawesome.com/9e8af728da.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -291,12 +292,14 @@
               </p>
               <ul class="icons">
                 <li class="inner__link">
-                  <a href="https://github.com/cpettet/freezuh_project" class="icon brands fa-github">
+                  <a href="https://github.com/cpettet/freezuh_project">
+                    <i class="fab fa-github"></i>
                     <span class="label">Github</span>
                   </a>
                 </li>
                 <li class="inner__link">
-                  <a href="https://freezuh-final-transformation.herokuapp.com/" class="icon solid fa-link">
+                  <a href="https://freezuh-final-transformation.herokuapp.com/">
+                    <i class="fas fa-link"></i>
                     <span class="label">Link</span>
                   </a>
                 </li>
@@ -304,8 +307,8 @@
             </div>
           </article>
           <article>
-            <a href="https://like-or-hate.herokuapp.com/" class="image"
-              ><img src="images/like-or-hate-01.png" alt="screenshot of website"
+            <a href="https://like-or-hate.herokuapp.com/" class="image__container"
+              ><img class="image" src="images/like-or-hate-01.png" alt="screenshot of website"
             /></a>
             <div class="inner">
               <h4>Like Or Hate</h4>
@@ -316,13 +319,15 @@
                 Built with AWS, Python, Flask, SQLAlchemy, React.js, and Redux.
               </p>
               <ul class="icons">
-                <li>
-                  <a href="https://github.com/composerben/flask-group-project" class="icon brands fa-github">
+                <li class="inner__link">
+                  <a href="https://github.com/composerben/flask-group-project">
+                    <i class="fab fa-github"></i>
                     <span class="label">Github</span>
                   </a>
                 </li>
-                <li>
-                  <a href="https://like-or-hate.herokuapp.com/" class="icon solid fa-link">
+                <li class="inner__link">
+                  <a href="https://like-or-hate.herokuapp.com/">
+                    <i class="fas fa-link"></i>
                     <span class="label">Link</span>
                   </a>
                 </li>
@@ -330,8 +335,8 @@
             </div>
           </article>
           <article>
-            <a href="https://folk-genius.herokuapp.com/" class="image"
-              ><img src="images/folk-genius-01.png" alt=""
+            <a href="https://folk-genius.herokuapp.com/" class="image__container"
+              ><img src="images/folk-genius-01.png" alt="" class="image"
             /></a>
             <div class="inner">
               <h4>Folk Genius</h4>
@@ -342,13 +347,15 @@
                 Built with Node.js, Express.js, Sequelize, React.js, and Redux.
               </p>
               <ul class="icons">
-                <li>
-                  <a href="https://github.com/cpettet/Genius-Clone" class="icon brands fa-github">
+                <li class="inner__link">
+                  <a href="https://github.com/cpettet/Genius-Clone">
+                    <i class="fab fa-github"></i>
                     <span class="label">Github</span>
                   </a>
                 </li>
-                <li>
-                  <a href="https://folk-genius.herokuapp.com/" class="icon solid fa-link">
+                <li class="inner__link">
+                  <a href="https://folk-genius.herokuapp.com/">
+                    <i class="fas fa-link"></i>
                     <span class="label">Link</span>
                   </a>
                 </li>
@@ -356,8 +363,8 @@
             </div>
           </article>
           <article>
-            <a href="https://taco-tea-group.herokuapp.com/" class="image"
-              ><img src="images/taco-tea.png" alt=""
+            <a href="https://taco-tea-group.herokuapp.com/" class="image__container"
+              ><img src="images/taco-tea.png" alt="" class="image"
             /></a>
             <div class="inner">
               <h4>Taco Tea</h4>
@@ -368,13 +375,15 @@
                 <br /><br />
                 Built with Node.js, Express.js and Sequelize.
                 <ul class="icons">
-                  <li>
-                    <a href="https://github.com/cpettet/Taco_Tea" class="icon brands fa-github">
+                  <li class="inner__link">
+                    <a href="https://github.com/cpettet/Taco_Tea">
+                      <i class="fab fa-github"></i>
                       <span class="label">Github</span>
                     </a>
                   </li>
-                  <li>
-                    <a href="https://taco-tea-group.herokuapp.com/" class="icon solid fa-link">
+                  <li class="inner__link">
+                    <a href="https://taco-tea-group.herokuapp.com/">
+                      <i class="fas fa-link"></i>
                       <span class="label">Link</span>
                     </a>
                   </li>
