Changed the screenshots. Changed some font-awesome icons

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               href="https://freezuh-final-transformation.herokuapp.com/"
               class="image__container"
             >
-              <img class="image" src="images/freezuh-01.png" alt="screenshot of website" />
+              <img class="image" src="images/freezuh-screens/screenshot-freezuh-final-transformation.herokuapp.com-2021.09.07-00_36_06.png" alt="screenshot of website" />
             </a>
             <div class="inner">
               <h4>Freezuh, Final Transformation</h4>
@@ -308,7 +308,7 @@
           </article>
           <article>
             <a href="https://like-or-hate.herokuapp.com/" class="image__container"
-              ><img class="image" src="images/like-or-hate-01.png" alt="screenshot of website"
+              ><img class="image" src="images/like-or-hate-screens/screenshot-like-or-hate.herokuapp.com-2021.09.07-00_53_55.png" alt="screenshot of website"
             /></a>
             <div class="inner">
               <h4>Like Or Hate</h4>
@@ -336,7 +336,7 @@
           </article>
           <article>
             <a href="https://folk-genius.herokuapp.com/" class="image__container"
-              ><img src="images/folk-genius-01.png" alt="" class="image"
+              ><img src="images/folk-genius-screens/screenshot-folk-genius.herokuapp.com-2021.09.07-00_58_11.png" alt="" class="image"
             /></a>
             <div class="inner">
               <h4>Folk Genius</h4>
@@ -364,7 +364,7 @@
           </article>
           <article>
             <a href="https://taco-tea-group.herokuapp.com/" class="image__container"
-              ><img src="images/taco-tea.png" alt="" class="image"
+              ><img src="images/taco-tea-screens/screenshot-taco-tea-group.herokuapp.com-2021.09.07-01_00_05.png" alt="" class="image"
             /></a>
             <div class="inner">
               <h4>Taco Tea</h4>
@@ -430,22 +430,21 @@
           <li>
             <a
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf"
-              class="button primary icon solid fa-file-pdf"
-              >PDF</a
+              >
+              <i class="fas fa-file-pdf"></i>PDF</a
             >
           </li>
           <li>
             <a
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=doc"
-              class="button icon solid fa-file-word"
-              >DOC</a
+              >
+              <i class="fas fa-file-word"></i>DOC</a
             >
           </li>
           <li>
             <a
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=txt"
-              class="button icon solid fa-file-alt"
-              >TXT</a
+              ><i class="fas fa-file-alt"></i>TXT</a
             >
           </li>
         </ul>
