table for contact looks good. responsive ui for the cards interface

--- a/index.html
+++ b/index.html
@@ -314,9 +314,13 @@
               <h4>Like Or Hate</h4>
               <p>
                 An Instagram clone with additional functionality allowing users
-                to democratically delete posts or comments.
+                to democratically delete posts or comments. Co-developed AWS S3
+                functionality, CRUD for comments, CRUD for posts, and user
+                reactions and their deletion functionality.
                 <br /><br />
-                Built with AWS, Python, Flask, SQLAlchemy, React.js, and Redux.
+                Built with AWS, Python, Flask, SQLAlchemy, JavaScript, React.js,
+                and Redux. Created remotely with three others through Github and
+                Zoom.
               </p>
               <ul class="icons">
                 <li class="inner__link">
@@ -342,7 +346,8 @@
               <h4>Folk Genius</h4>
               <p>
                 A Genius clone focused on folk and indie music. Users can add, 
-                update, and delete tracks.
+                update, and delete tracks. For any song, users can add their
+                interpretation of the track's lyrics through annotations.
                 <br /><br />
                 Built with Node.js, Express.js, Sequelize, React.js, and Redux.
               </p>
@@ -370,10 +375,11 @@
               <h4>Taco Tea</h4>
               <p>
                 A Medium clone focused on food, specifically tacos. Users 
-                can share their food experiences and interact through emojis 
-                and comments.
+                can share their food experiences and recipes. Users can interact
+                with user-created posts by leaving emoji reactions and dropping
+                comments.
                 <br /><br />
-                Built with Node.js, Express.js and Sequelize.
+                Built with Node.js, Express.js, and Sequelize with a remote team.
                 <ul class="icons">
                   <li class="inner__link">
                     <a href="https://github.com/cpettet/Taco_Tea">
@@ -394,8 +400,8 @@
         </div>
       </section>
   
+      <h1 class="section__header">Contact Me</h1>
       <section id="contact">
-        <h3>Contact Me</h3>
         <table>
           <tbody>
             <tr>
@@ -424,24 +430,24 @@
         </table>
       </section>
   
+      <h1 class="section__header">My Resume</h1>
       <section id="resume">
-        <h3>My Resume</h3>
         <ul class="actions">
-          <li>
+          <li class="actions__link">
             <a
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf"
               >
               <i class="fas fa-file-pdf"></i>PDF</a
             >
           </li>
-          <li>
+          <li class="actions__link">
             <a
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=doc"
               >
               <i class="fas fa-file-word"></i>DOC</a
             >
           </li>
-          <li>
+          <li class="actions__link">
             <a
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=txt"
               ><i class="fas fa-file-alt"></i>TXT</a
