removed border from buttons. changed the nav bar to a color gradient.

--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
         <ul class="actions">
           <li class="actions__link">
             <a
+              class="link link__primary"
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf"
               >
               <i class="fas fa-file-pdf"></i>PDF</a
@@ -442,6 +443,7 @@
           </li>
           <li class="actions__link">
             <a
+              class="link"
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=doc"
               >
               <i class="fas fa-file-word"></i>DOC</a
@@ -449,6 +451,7 @@
           </li>
           <li class="actions__link">
             <a
+              class="link"
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=txt"
               ><i class="fas fa-file-alt"></i>TXT</a
             >
